--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <ul></ul>
+    <!-- <ul></ul> async.js-->
     
-    <script src="./js/main.js"></script>
+    <h2></h2>
+
+    <button>guardar</button>
+
+    <script src="./js/store.js"></script>
 </body>
 </html>
