--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
     <title>Document</title>
 </head>
 <body>
-    <!-- <ul></ul> async.js-->
+    <!-- ul funciona con async.js -->
+    <ul></ul>
     
+    
+    <!-- h2 & button funciona con store.js -->
     <h2></h2>
-
     <button>guardar</button>
 
+    <script src="./js/async.js"></script>
     <script src="./js/store.js"></script>
 </body>
 </html>
